# clide

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  session.md
backend/: pyproject.toml
backend/clide/: main.py
backend/clide/api/: config_routes.py  conversation_routes.py  goal_routes.py  memory_routes.py  reward_routes.py  routes.py  schemas.py  websocket.py  workshop_routes.py
backend/clide/autonomy/: activity_summary.py  goals.py  models.py  scheduler.py  thinker.py  workshop.py
backend/clide/character/: character.py  mood.py  opinions.py  traits.py
backend/clide/config/: settings.py
backend/clide/core/: agent.py  agent_events.py  context_builder.py  conversation_store.py  cost.py  event_log.py  llm.py  persona.py  prompts.py  state.py
backend/clide/memory/: amem.py  chroma_store.py  models.py  processor.py  sqlite_store.py  store.py
backend/clide/tools/: mcp_client.py  models.py  registry.py  smallville_mcp.py
backend/tests/: conftest.py
backend/tests/test_api/: test_config_routes.py  test_conversation_routes.py  test_memory_routes.py  test_routes.py  test_schemas.py  test_settings.py  test_websocket.py  test_workshop_routes.py  test_workshop_schemas.py
backend/tests/test_autonomy/: test_activity_summary.py  test_goals.py  test_models.py  test_scheduler.py  test_scheduler_workshop.py  test_thinker.py  test_thinker_workshop.py  test_workshop.py
backend/tests/test_character/: test_character.py  test_mood.py  test_opinions.py  test_traits.py
backend/tests/test_core/: test_agent.py  test_agent_events.py  test_agent_step.py  test_cost.py  (+7 more)
(+58 files in other folders)
